# differentiable_grin_raytracer

./: .gitignore  notes.md  pyproject.toml
grin_tracer/: coordinates.py  interactive_trainer.py  main.py  main_blur.py  optic.py  ray_bundle.py  torch_utils.py
tests/: interpolator.py
