[project]
name = "grin-trace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "napari>=0.6.4",
    "numpy>=2.3.2",
    "pyqt5>=5.15.11",
    "torch>=2.8.0",
]

[project.scripts]
main="grin_tracer.main:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["grin_tracer"]

[tool.setuptools.package-dir]
"" = "."
